--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="fr">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
-	<meta name="robots" content="index, follow">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
+    <meta name="google-site-verification" content="HsV56zxHpEHU6tZvvCL6lDMt7XFEmqCHcwM4BZL9xmE" />
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -19,7 +18,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-    <title>La Panthère - Page principale</title>
+
+    <title>.</title>
 
     
 <!-- Analytics -->
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>L'agence la Panthère est <strong>une agence de web design</strong> qui aide les entreprises à devenir attractives et visible sur internet</h2>
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,11 +124,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h2>"L'agence la panthère est <strong>une excellente agence web !</strong> Les web designers ont réussi à capturer l'essence de notre entreprise 
-					et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon." 
-					<br>
-					Maxime Guibard, PDG de à vos fourchettes
-				</h2>
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
 
 			</div>
 		</div>
@@ -158,7 +154,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
