--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La panthère - Page principale</title>
 
     
 <!-- Analytics -->
@@ -84,7 +84,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>L'agence La Panthère est <strong>une agence de web design </strong>qui aide les entreprises à devenir
+					attractives et visibles sur internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,7 +125,10 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<h2>"L'agence La panthère est une excellente agence web ! Les web designer ont réussi à capturer l'essence de notre entreprise
+					et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+					<p>Maxime Guibard, PDG de à vos fourchettes</p>
+				</h2>
 
 			</div>
 		</div>
@@ -154,7 +158,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h3>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h3>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -205,9 +209,9 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h3 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
+			</h3>
 			<div class="col-sm-12 text-center">
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
