--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script defer src="./js/jquery-2.1.0.js"></script>
+	<script defer src="./js/bootstrap.js"></script>
+	<script defer src="./js/blocs.js"></script>
+	<script defer src="./js/jquery.touchSwipe.js"></script>
+	<script defer src="./js/gmaps.js"></script>
 
     <title>La panthère - Page principale</title>
 
@@ -129,7 +129,6 @@
 					et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
 					<p>Maxime Guibard, PDG de à vos fourchettes</p>
 				</h2>
-
 			</div>
 		</div>
 	</div>
