--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -62,7 +64,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -153,49 +155,49 @@
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-12 text-center">
+<div>
+	<div class="bloc-images">
+		<div>
+			<div>
 				<h3>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h3>
 			</div>
 		</div>
-		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+		<div class="images-1">
+			<div>
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
-				<h3 class="mg-md text-center">
+				<h3>
 					Refonte d'un site web pour un journal local
 				</h3>
-				<p class="text-center">
+				<p>
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
-			<div class="col-sm-6">
+			<div>
 				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-				<h3 class="mg-md text-center">
+				<h3>
 					Création d'un site web pour photographes
 				</h3>
-				<p class="text-center">
+				<p>
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
 			</div>
 		</div>
-		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+		<div class="images-2">
+			<div>
 				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
-				<h3 class="mg-md text-center">
+				<h3>
 					Création d'un site internet pour un voyageur
 				</h3>
-				<p class="text-center">
+				<p>
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
-			<div class="col-sm-6">
+			<div>
 				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-				<h3 class="mg-md text-center">
+				<h3>
 					Conception d'un site pour une agence de mariage
 				</h3>
-				<p class="text-center">
+				<p>
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
 			</div>
@@ -205,7 +207,7 @@
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h3 class="mg-md text-center tc-white">
