--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <div>
 	<div class="bloc-images">
 		<div>
-			<div>
+			<div class="titre-images">
 				<h3>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h3>
 			</div>
 		</div>
