--- a/page2.html
+++ b/page2.html
@@ -76,19 +76,19 @@
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label>
-							Nom
+							Nom<br>
 						</label>
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
-							Adresse email
+							Adresse email<br>
 						</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
 						<label>
-							Comment nous avez-vous connu ?
+							Comment nous avez-vous connu ?<br>
 						</label>
 						<input class="form-control" type="email" required id="input_504" />
 					</div>
@@ -122,9 +122,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<span class="white">
 					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				</span>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
