--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="agence design lyon, seo, site web, stratégie web, site internet, ,agence design">
+    <meta name="description" content="Notre agence La Panthère spécialisée dans le Web design à Lyon sera ravi de réaliser vos projets qu'il
+	parte de zéro ou pour un simple coup de jeune.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -18,7 +19,7 @@
 	<script defer src="./js/jqBootstrapValidation.js"></script>
 	<script defer src="./js/formHandler.js"></script>
 
-    <title>page2</title>
+    <title>Contact - La panthère</title>
 
 <!-- Analytics -->
  
@@ -34,7 +35,7 @@
 	<div class="nav-contact">
 		<nav>
 			<div class="navigation">
-				<a class="" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="atlanta web design logo" height="40" /></a>
+				<a class="" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Logo La Panthère" height="40" /></a>
 				<ul class="accueil">
 					<a href="index.html">
 						Accueil
