--- a/contact.html
+++ b/contact.html
@@ -119,11 +119,11 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<div class="bloc bgc-atomic-tangerine" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<span class="white">
+				<span>
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</span>
 				<div class="row row-no-gutters social">
